[package]
name        = "obsidian"
version     = "0.1.0"
edition     = "2021"
authors     = ["Frostfall Studio"]                    # ← make this a one-element array
license     = "MIT"
repository  = "https://github.com/Thorvald121/obsidian"
description = "A Lightroom-style photo editor built in Rust + egui"
readme      = "README.md"

[dependencies]
eframe = "0.23"
egui   = "0.23"
image  = "0.24"
rfd    = "0.5"
rawloader = "0.37.1"

[package.metadata.bundle]
# tell cargo-bundle where to find your icon(s)
# this *must* be an array, even if you only have one file
icon = ["/Users/vyakushev/Projects/obsidian-raw-editor/obsidian/icons/icon.icns"]

# macOS-specific settings
[package.metadata.bundle.mac]
category = "public.app-category.photography"
